Carte testée Test du  QEI Test du capteur Test PWM Test CLock (fail donc clock interne) Mise en place + Test asserv bidon Remise en place de la triangulation Test Uart USB

--- a/Carte Balise.X/nbproject/Makefile-genesis.properties
+++ b/Carte Balise.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Sat Jan 16 23:41:28 CET 2016
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=87bd75e150bff99fccfd6604f576ce22
-default.languagetoolchain.dir=D\:\\Programmes\\MPLABX\\xc16\\v1.25\\bin
-configurations-xml=3cb7f5e3d56ff8c6d5b18a073083ce3b
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f034478aa60d3a123c4e097fb2922dfc
+#Sun Jan 17 18:47:57 CET 2016
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=4a3b180ac5d88cf6f0a75c5f3ee4a5aa
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.25\\bin
+configurations-xml=ef7c80150c00e51e507b0e23ac3f7beb
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=86cd07c925781d185dcd90a0ee6d03fc
 default.languagetoolchain.version=1.25
 host.platform=windows
 conf.ids=default
