Test  bitfield carte strategie
Utilisation de la carte pour tester la mise en place de bit field dans
le code de la carte stratégie.
(Par ce que je n'avais pas de carte sous la main)

--- a/Carte Balise.X/nbproject/Makefile-genesis.properties
+++ b/Carte Balise.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Thu Mar 17 22:04:25 CET 2016
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=4a3b180ac5d88cf6f0a75c5f3ee4a5aa
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.25\\bin
-configurations-xml=399708fa02947f617eeb26d5f84992f8
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=86cd07c925781d185dcd90a0ee6d03fc
-default.languagetoolchain.version=1.25
+#Sat May 28 10:45:21 CEST 2016
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=f601c623d66375d4b2c6ac49af4a0156
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.26\\bin
+configurations-xml=ef98c74384bfe6c4078501d6b84b4195
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
+default.languagetoolchain.version=1.26
 host.platform=windows
 conf.ids=default
