modif i2c non concluantes

--- a/Carte Balise.X/nbproject/Makefile-genesis.properties
+++ b/Carte Balise.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Sat May 28 10:45:21 CEST 2016
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=f601c623d66375d4b2c6ac49af4a0156
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.26\\bin
-configurations-xml=ef98c74384bfe6c4078501d6b84b4195
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
-default.languagetoolchain.version=1.26
+#Sat Mar 18 11:29:10 CET 2017
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a62d7d7cc23ca597298269b05924bf81
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.30\\bin
+configurations-xml=2957acc31402fe0e0a5bbe945ad437dc
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=671be5dae89725b69579225ccba7468e
+default.languagetoolchain.version=1.30
 host.platform=windows
 conf.ids=default
